tests/baselines/reference/parser566700.errors.txt
==== tests/cases/compiler/parser566700.ts (1 errors) ====
    var v = ()({});
             ~
!!! parser566700.ts(1,10): error TS1005: 'expression' expected.